iac/kubernetes/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-example
  labels:
    istio-injection: enabled
