iac/kubernetes/02-otel.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel
  namespace: istio-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel
  template:
    metadata:
      labels:
        app: otel
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: otel
          image: otel/opentelemetry-collector-contrib:0.123.0
          command:
            - "/otelcol-contrib"
            - "--config=/etc/otel-collector-config.yaml"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/otel-collector-config.yaml
              subPath: otel-collector-config.yaml
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 400Mi
          ports:
          - containerPort: 4317
          - containerPort: 4318
          - containerPort: 13133
      volumes:
        - name: config-volume
          configMap:
            name: otel-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: istio-example
  labels:
    app: otel
spec:
  selector:
    app: otel
  ports:
    - name: grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: http
      protocol: TCP
      port: 4318
      targetPort: 4318
    - name: health-check
      protocol: TCP
      port: 13133
      targetPort: 13133
  type: ClusterIP
